@@ -4,8 +4,10 @@ cdbs (0.4.40) UNRELEASED; urgency=low
   * Added DEB_PYTHON_PACKAGES_EXCLUDE (python-distutils.mk)
     (closes: #365257)
   * cdbs-edit-patch: Avoid error message when creating new patch
+  * Try patches at level 1 first, to avoid problems with patches that only
+    create new files (simple-patchsys.mk) (closes: #365524)
 
- -- Peter Eisentraut <petere@debian.org>  Sun, 14 May 2006 00:15:12 +0200
+ -- Peter Eisentraut <petere@debian.org>  Sun, 14 May 2006 00:39:00 +0200
 
 cdbs (0.4.39-0.1) unstable; urgency=low
 
